--- a/index.old.html
+++ b/index.old.html
@@ -132,7 +132,7 @@
 			&nbsp;&nbsp;
 			<a class="deselected" target="_blank" href="https://twitter.com/gocoinpop">Twitter</a>
 			&nbsp;&nbsp;
-			<a class="deselected" target="_blank" href="mailto:brandon@coinpop.com">Contact</a>
+			<a class="deselected" target="_blank" href="mailto:brandon@coinpop.co">Contact</a>
 			&nbsp;&nbsp;
 			<a class="deselected" target="_blank" href="https://github.com/sgehly/coinpop">GitHub <span class="red"><3</span></a>
 			&nbsp;&nbsp;
