--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 			</div>
 		</div>
 		<div class="flex pad-all-large">
-			<a class="deselected" onclick="alert('Coinpop is a new dashboard dedicated to letting you be the first to trade on the market by alerting you on prices, news and social engagements. If you have any suggestions or feedback, shoot an email over to brandon@coinpop.co using the Contact link below.');">About</a>
+			<a class="deselected" onclick="alert('Coinpop is a new dashboard dedicated to letting you be the first to trade on the market by alerting you on prices, news and social engagements. If you have any suggestions or feedback, shoot an email over to coinpopco@gmail.com using the Contact link below.');">About</a>
 			&nbsp;&nbsp;
 			<a class="deselected" target="_blank" href="https://twitter.com/gocoinpop">Twitter</a>
 			&nbsp;&nbsp;
-			<a class="deselected" target="_blank" href="mailto:brandon@coinpop.co">Contact</a>
+			<a class="deselected" target="_blank" href="mailto:coinpopco@gmail.com">Contact</a>
 			&nbsp;&nbsp;
 			<a class="deselected" target="_blank" href="https://github.com/sgehly/coinpop">GitHub <span class="red"><3</span></a>
 			&nbsp;&nbsp;
