--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Heebo:300,400,500,700,900" rel="stylesheet">
 	<link href='https://raw.github.com/daneden/animate.css/master/animate.css' rel="stylesheet">
 	<link rel="icon" href="./favicon.ico" type="image/x-icon" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="./style.css">
 	<meta charset="utf-8"/>
 </head>
